--- a/juegos/templates/juegos/memoria_cartas.html
+++ b/juegos/templates/juegos/memoria_cartas.html
@@ -921,7 +921,7 @@ class MemoryGame {
             
             for (const format of formats) {
                 try {
-                    audio.src = `/static/sounds/${audioFile}.${format}`;
+                    audio.src = `${window.STATIC_URL}sounds/${audioFile}.${format}`;
                     this.gameAudio[key] = audio;
                     break;
                 } catch (e) {
