--- a/juegos/templates/juegos/secuencia_eventos.html
+++ b/juegos/templates/juegos/secuencia_eventos.html
@@ -1563,7 +1563,7 @@ class EventSequenceGame {
             
             for (const format of formats) {
                 try {
-                    audio.src = `/static/sounds/${audioFile}.${format}`;
+                    audio.src = `${window.STATIC_URL}sounds/${audioFile}.${format}`;
                     this.gameAudio[key] = audio;
                     break;
                 } catch (e) {
