--- a/juegos/templates/juegos/base.html
+++ b/juegos/templates/juegos/base.html
@@ -10,6 +10,12 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One:wght@400&family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
     {% load static %}
+    
+    <!-- Variables globales para JavaScript -->
+    <script>
+        window.STATIC_URL = "{% get_static_prefix %}";
+    </script>
+    
     <style>
         * {
             margin: 0;
